deploy: 69dbe9be3352d65b97ab4ff9d94472ee101feee9

--- a/contents/01-introduction.html
+++ b/contents/01-introduction.html
@@ -597,8 +597,7 @@ window.Quarto = {
    
   <ul>
 <li><a href="#quest-ce-que-lanalyse-de-donn%C3%A9es" id="toc-quest-ce-que-lanalyse-de-données" class="nav-link active" data-scroll-target="#quest-ce-que-lanalyse-de-données">Qu’est-ce que l’analyse de données ?</a></li>
-  <li><a href="#objectifs" id="toc-objectifs" class="nav-link" data-scroll-target="#objectifs">Objectifs</a></li>
-  <li><a href="#pratique-de-programmation" id="toc-pratique-de-programmation" class="nav-link" data-scroll-target="#pratique-de-programmation">Pratique de programmation</a></li>
+  <li><a href="#objectifs-du-cours" id="toc-objectifs-du-cours" class="nav-link" data-scroll-target="#objectifs-du-cours">Objectifs du cours</a></li>
   </ul>
 <div class="toc-actions"><ul>
 <li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li>
@@ -640,21 +639,25 @@ window.Quarto = {
 <i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Example
+Exemple
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>Imaginons que vous êtes le gérant d’un magasin. Vous aimeriez savoir quand ouvrir votre magasin pour maximiser votre chiffre d’affaires. Pour cela, vous pouvez comptez le nombre de clients par heure pendant une période de temps, disons un mois, et ensuite s’interesser à comment ses données sont structurées par rapport aux horaires d’ouverture.</p>
+<p>Imaginons que vous êtes employé par l’Organisation des Nations Unies (ONU). Votre mission est d’analyser l’espérance de vie à travers le monde. Pour celà, vous disposez d’une mesure de l’espérance de vie dans chaque pays membre de l’ONU, bien sûr, mais aussi le PIB par habitant, les montants des dépenses liés à la santé, le taux de fertilité, le taux d’urbanisation, le niveau d’éducation du pays, etc. Le but de l’analyse de données est de trouver des liens entre ses différentes variables et la variable d’intérêt, l’espérance de vie, de visualiser ces données, et éventuellement de prédire l’espérance de vie à partir des autres variables.</p>
 </div>
 </div>
-</section><section id="objectifs" class="level2"><h2 class="anchored" data-anchor-id="objectifs">Objectifs</h2>
-<p>Ce cours n’a pas vocation à être exhaustif, dans le sens de présenter toutes les méthodes possibles. Ce cours n’a pas non plus vocation à être à l’état de l’art, dans le sens où on ne s’intéressera pas aux derniers développements en apprentissage machine. Ce cours n’est pas non plus un cours de programmation.</p>
-</section><section id="pratique-de-programmation" class="level2"><h2 class="anchored" data-anchor-id="pratique-de-programmation">Pratique de programmation</h2>
+</section><section id="objectifs-du-cours" class="level2"><h2 class="anchored" data-anchor-id="objectifs-du-cours">Objectifs du cours</h2>
+<p>Dans ce cours, on cherche à introduire des méthodes qui permettent une étude d’un jeu de données de “haute dimension” (dans le sens où l’on ne peut pas faire un simple graphique de l’ensemble des variables pour chaque observation) sans avoir recours à un modèle probabiliste. Les différentes techniques que l’on va voir peuvent servir à:</p>
 <ul>
-<li><p>Conseils généraux</p></li>
-<li><p>Spécifique à R</p></li>
-<li><p>Spécifique à Python</p></li>
-</ul></section></main><!-- /main --><script>
+<li><p>visualiser les données;</p></li>
+<li><p>réduire la dimension des données;</p></li>
+<li><p>identifier certains liens entre les variables;</p></li>
+<li><p>diviser le jeu de données en groupes/classes.</p></li>
+</ul>
+<p>Ce cours n’a pas vocation à être exhaustif, dans le sens de présenter toutes les méthodes possibles. Ce cours n’a pas non plus vocation à être à l’état de l’art, dans le sens où on ne s’intéressera pas aux derniers développements en apprentissage machine. Ce cours n’est pas non plus un cours de programmation.</p>
+
+
+</section></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
