--- a/en/informations/evaluations.html
+++ b/en/informations/evaluations.html
@@ -765,8 +765,8 @@ Identification. During an exam, an eligible photo ID card must be placed on the 
 </section><section id="absence-from-a-mandatory-activity" class="level2"><h2 class="anchored" data-anchor-id="absence-from-a-mandatory-activity">Absence from a mandatory activity</h2>
 <p>These conditions apply in accordance with articles 4.41 and 4.42 of the Réglement des études de l’Université Laval:</p>
 <ul>
-<li>
-<strong>Article 4.41:</strong> Any failure to submit to an evaluation activity will result in a grade of zero for that evaluation activity, unless the student demonstrates that the omission is attributable to serious reasons. <strong>Article 4.42:</strong> An evaluation may be repeated for serious reasons. This is done in accordance with the procedures laid down by the unit responsible for the training activity.</li>
+<li><p><strong>Article 4.41:</strong> Any failure to submit to an evaluation activity will result in a grade of zero for that evaluation activity, unless the student demonstrates that the omission is attributable to serious reasons.</p></li>
+<li><p><strong>Article 4.42:</strong> An evaluation may be repeated for serious reasons. This is done in accordance with the procedures laid down by the unit responsible for the training activity.</p></li>
 </ul>
 <p>The retaking of an assessment may therefore exceptionally be authorized for reasons deemed serious, as long as the procedure described below is followed.</p>
 <p><strong>Reasons for absence deemed to be serious</strong></p>
