--- a/en/informations/materials.html
+++ b/en/informations/materials.html
@@ -85,6 +85,7 @@ window.Quarto = {
   typesetMath
 };
 </script><meta property="og:title" content="Materials – STT-2200: Data Analysis">
+<meta property="og:description" content="Website for STT-2200">
 <meta property="og:site_name" content="STT-2200: Data Analysis">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -617,7 +618,26 @@ window.Quarto = {
   
 
 
-</header></main><!-- /main --><script>
+</header><p>This page brings together various useful resources for the course.</p>
+<p><strong>The Elements of Statistical Learning: Data Mining, Inference and Prediction</strong>, 2nd Edition</p>
+<p>Authors: Trevor Hastie, Robert Tibshirani and Jerome Friedman</p>
+<p>Publisher: Springer (New York, 2009)</p>
+<p>ISBN: 0-387-84857-0</p>
+<p>Link: <a href="https://hastie.su.domains/ElemStatLearn/">authors’ website</a></p>
+<p><strong>An Introduction to Statistical Learning: with application in R</strong>, 2nd Edition</p>
+<p>Authors: Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani</p>
+<p>Publisher: Springer (New York, 2021)</p>
+<p>ISBN: 1-0716-1417-4</p>
+<p>Link: <a href="https://www.statlearning.com">authors’ website</a></p>
+<p><strong>An Introduction to Statistical Learning: with application in Python</strong></p>
+<p>Authors: Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani and Jonathan Taylor</p>
+<p>Publisher: Springer (Switzerland, 2023)</p>
+<p>ISBN: 3-031-38746-3</p>
+<p>Link: <a href="https://www.statlearning.com">authors’ website</a></p>
+
+
+
+</main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
