--- a/en/informations/schedule.html
+++ b/en/informations/schedule.html
@@ -85,6 +85,7 @@ window.Quarto = {
   typesetMath
 };
 </script><meta property="og:title" content="Schedule – STT-2200: Data Analysis">
+<meta property="og:description" content="Website for STT-2200">
 <meta property="og:site_name" content="STT-2200: Data Analysis">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -617,7 +618,17 @@ window.Quarto = {
   
 
 
-</header></main><!-- /main --><script>
+</header><p>The plan is given for information only.</p>
+<table class="caption-top">
+<thead><tr class="header">
+<th style="text-align: right;">Week</th>
+<th style="text-align: right;">Date</th>
+<th style="text-align: right;">Hour</th>
+<th style="text-align: center;">Plan</th>
+<th style="text-align: right;">Evaluations</th>
+</tr></thead>
+<tbody></tbody>
+</table></main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
