--- a/informations/evaluations.html
+++ b/informations/evaluations.html
@@ -765,13 +765,8 @@ Identification. Lors d’un examen, une carte d’identité avec photo admissibl
 </section><section id="absence-à-une-activité-obligatoire" class="level2"><h2 class="anchored" data-anchor-id="absence-à-une-activité-obligatoire">Absence à une activité obligatoire</h2>
 <p>Ces modalités s’appliquent en vertu des articles 4.41 et 4.42 du Réglement des études de l’Université Laval:</p>
 <ul>
-<li>
-<strong>Article 4.41:</strong> Tout défaut de se soumettre à une activité d’évaluation entraîne la note de zéro pour cette activité d’évaluation, à moins que l’étudiante ou l’étudiant ne démontre que cette omission est attribuable à des motifs sérieux.
-<ul>
-<li>
-<strong>Article 4.42:</strong> La reprise d’une évaluation est possible pour des motifs sérieux. Elle se fait selon les modalités prévues par l’unité responsable de l’activité de formation.</li>
-</ul>
-</li>
+<li><p><strong>Article 4.41:</strong> Tout défaut de se soumettre à une activité d’évaluation entraîne la note de zéro pour cette activité d’évaluation, à moins que l’étudiante ou l’étudiant ne démontre que cette omission est attribuable à des motifs sérieux.</p></li>
+<li><p><strong>Article 4.42:</strong> La reprise d’une évaluation est possible pour des motifs sérieux. Elle se fait selon les modalités prévues par l’unité responsable de l’activité de formation.</p></li>
 </ul>
 <p>La reprise d’une évaluation peut donc execptionnellement être autorisée pour des motifs jugés sérieux, dans la mesure où la procédure décrite ci-dessous est respectée.</p>
 <p><strong>Motifs d’absence jugés sérieux</strong></p>
