--- a/informations/materials.html
+++ b/informations/materials.html
@@ -85,6 +85,7 @@ window.Quarto = {
   typesetMath
 };
 </script><meta property="og:title" content="Matériel – STT-2200: Analyse de données">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 <body class="nav-sidebar floating quarto-light">
@@ -617,7 +618,26 @@ window.Quarto = {
   
 
 
-</header></main><!-- /main --><script>
+</header><p>Cette page regroupe différentes ressources utiles pour le cours.</p>
+<p><strong>The Elements of Statistical Learning: Data Mining, Inference and Prediction</strong>, 2nd Edition</p>
+<p>Auteurs: Trevor Hastie, Robert Tibshirani et Jerome Friedman</p>
+<p>Éditeur: Springer (New York, 2009)</p>
+<p>ISBN: 0-387-84857-0</p>
+<p>Lien: <a href="https://hastie.su.domains/ElemStatLearn/">site web des authors</a></p>
+<p><strong>An Introduction to Statistical Learning: with application in R</strong>, 2nd Edition</p>
+<p>Auteurs: Gareth James, Daniela Witten, Trevor Hastie et Robert Tibshirani</p>
+<p>Éditeur: Springer (New York, 2021)</p>
+<p>ISBN: 1-0716-1417-4</p>
+<p>Lien: <a href="https://www.statlearning.com">site web des authors</a></p>
+<p><strong>An Introduction to Statistical Learning: with application in Python</strong></p>
+<p>Auteurs: Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani et Jonathan Taylor</p>
+<p>Éditeur: Springer (Suisse, 2023)</p>
+<p>ISBN: 3-031-38746-3</p>
+<p>Lien: <a href="https://www.statlearning.com">site web des authors</a></p>
+
+
+
+</main><!-- /main --><script>
 
 /* update total correct if #webex-total_correct exists */
 update_total_correct = function() {
