--- a/informations/mcq.html
+++ b/informations/mcq.html
@@ -650,7 +650,7 @@ window.Quarto = {
 
 </header><section id="information-sur-le-premier-examen" class="level2"><h2 class="anchored" data-anchor-id="information-sur-le-premier-examen">Information sur le premier examen</h2>
 <p>Le premier examen est un questionaire à choix multiples avec quantification de l’incertitude.</p>
-<p>L’ utilisation de degrés de certitude permet à l’étudiant d’évaluer le niveau de connaissance de la réponse donnée. La barème des notes, basé sur la théorie des décision <span class="citation" data-cites="leclercqTASTEApproachGeneral1993">(<a href="#ref-leclercqTASTEApproachGeneral1993" role="doc-biblioref">Leclercq et al. 1993</a>)</span>, peut sembler bizarre mais il a été fait de tel manière que:</p>
+<p>L’ utilisation de degrés de certitude permet à l’étudiant et à l’étudiante d’évaluer le niveau de connaissance de la réponse donnée. La barème des notes, basé sur la théorie des décision <span class="citation" data-cites="leclercqTASTEApproachGeneral1993">(<a href="#ref-leclercqTASTEApproachGeneral1993" role="doc-biblioref">Leclercq et al. 1993</a>)</span>, peut sembler bizarre mais il a été fait de tel manière que:</p>
 <ul>
 <li>dire la vérité soit la stratégie qui rapporte le plus de points;</li>
 <li>ceux qui s’auto-évaluent bien gagnent plus de points que si l’on appliquait un barème correctif tenant compte des probabilités d’avoir la réponse correcte aléatoirement.</li>
