--- a/contents/dimension/01-pca.html
+++ b/contents/dimension/01-pca.html
@@ -780,7 +780,7 @@ Propriétés de <span class="math inline">\(A\)</span>
 </section><section id="pratique-de-lacp" class="level3"></section></section><div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Pratique de l’ACP</h2>
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-hotellingAnalysisComplexStatistical1933" class="csl-entry" role="listitem">
-Hotelling, H. 1933. <span>« Analysis of a complex of statistical variables into principal components »</span>. <a href="https://doi.org/10.1037/h0071325">https://doi.org/10.1037/h0071325</a>.
+Hotelling, H. 1933. <span>« Analysis of a Complex of Statistical Variables into Principal Components »</span>. <em>Journal of Educational Psychology</em> 24 (6): 417‑41. <a href="https://doi.org/10.1037/h0071325">https://doi.org/10.1037/h0071325</a>.
 </div>
 </div></section></div></main><!-- /main --><script>
 
